--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
               <i class="fas fa-envelope"></i>
               <div class="st-single-info-details">
                 <h4>Email</h4>
-                <a href="#">demo@example.com</a>
+                <a href="#">admin@example.com</a>
                 <a href="#">info@support.com</a>
               </div>
             </div>
