--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Birthday</span> : <span>May 07, 1990</span></li>
                   <li><span>Phone</span> : <span>+1 866-369-9009</span></li>
-                  <li><span>Email</span> : <span>devis@demo.com</span></li>
+                  <li><span>Email</span> : <span>admin@demo.com</span></li>
                   <li><span>From</span> : <span>2661 Hich meadow lane bear creek</span></li>
                   <li><span>Language</span> : <span>English, Germanic</span></li>
                   <li><span>Freelance</span> : <span>Available</span></li>
