--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
   <footer>
     <div class="container">
       <div class="st-copyright-wrap text-center">
-        <div class="st-copyright-text">© 2023. All right reserved.</div>
+        <div class="st-copyright-text">© 2023 copyright all right reserved.</div>
       </div>
     </div>
   </footer>
