--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Laralink">
   <!-- Page Title -->
-  <title>Arafat - Personal Portfolio</title>
+  <title>Arafat Hussen - Portfolio Demo</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="assets/img/favicon.svg" />
   <!-- Stylesheets -->
